# ScottishWalks

./: .gitignore  README.md  arealinks.json  config.py  dashboard.py  dashboard_ipyleaflet.py  pyproject.toml  run_etl.py  run_gpx.py  run_scraper.py  settings.py
data/: display.parquet  processed.parquet  processed_gpx.parquet
notebooks/: explore.ipynb
src/: data.py  etl.py  gpx.py  main.py  sandbox.py  scrape.py  settings.py
tests/: tests_basic.py
utils/: streamlit.py
walkdata/: islandswalks.json  outer-hebrideswalks.json
