[tool.poetry]
name = "ScottishWalks"
version = "0.1.0"
description = ""
authors = ["Acusick1 <andrewcusick13@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
ipyleaflet = "^0.16.0"
OSGridConverter = "^0.1.3"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"
selenium = "^4.1.3"
qgrid = "^1.3.1"
streamlit = "^1.9.0"
leafmap = "^0.9.2"
geopandas = "^0.10.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
qgrid = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
